--- a/sourcecode/UploadService/pom.xml
+++ b/sourcecode/UploadService/pom.xml
@@ -54,6 +54,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
+			<version>5.2.17.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -61,6 +66,8 @@
 			<version>1.16.20</version>
 			<scope>provided</scope>
 		</dependency>
+
+
 
     </dependencies>
 
