--- a/sourcecode/UploadService/pom.xml
+++ b/sourcecode/UploadService/pom.xml
@@ -68,6 +68,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+
 
     </dependencies>
 
