--- a/sourcecode/UploadService/docker-compose.yml
+++ b/sourcecode/UploadService/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - MYSQL_PASSWORD=mysqlpw
 
   postgres:
-    image: postgres:9.6.8
+    build: ./postgres
     ports:
       - 5432:5432
     environment:
@@ -42,17 +42,20 @@ services:
     ports:
       - "8099:8080"
     depends_on:
-      - mysql
+      - postgres
       - kafka
       - zookeeper
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
-      SPRING_DATASOURCE_USERNAME: mysqluser
-      SPRING_DATASOURCE_PASSWORD: mysqlpw
-      SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.jdbc.Driver
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres/uploadservice
+      SPRING_DATASOURCE_USERNAME: uploadservice
+      SPRING_DATASOURCE_PASSWORD: uploadservice
+      SPRING_DATASOURCE_TEST_ON_BORROW: "true"
+      SPRING_DATASOURCE_VALIDATION_QUERY: SELECT 1
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
       EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
       EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
-      EVENTUATELOCAL_CDC_DB_USER_NAME: root
-      EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
+      EVENTUATELOCAL_CDC_DB_USER_NAME: uploadservice
+      EVENTUATELOCAL_CDC_DB_PASSWORD: uploadservice
       EVENTUATELOCAL_CDC_BINLOG_CLIENT_ID: 1234567890
       EVENTUATELOCAL_CDC_SOURCE_TABLE_NAME: message
+      SPRING_PROFILES_ACTIVE: EventuatePolling
