--- a/sourcecode/UploadService/pom.xml
+++ b/sourcecode/UploadService/pom.xml
@@ -82,11 +82,11 @@
 			<version>1.3.3</version>
 		</dependency>
 
-		<!--<dependency>-->
-			<!--<groupId>io.eventuate.tram.core</groupId>-->
-			<!--<artifactId>eventuate-tram-events</artifactId>-->
-			<!--<version>${eventuateTramVersion}</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>io.eventuate.tram.core</groupId>
+			<artifactId>eventuate-tram-events</artifactId>
+			<version>${eventuateTramVersion}</version>
+		</dependency>
 		<!--<dependency>-->
 			<!--<groupId>io.eventuate.tram.core</groupId>-->
 			<!--<artifactId>eventuate-tram-messaging</artifactId>-->
